Changed and optimized directory structure

--- a/Sites/cafe.html
+++ b/Sites/cafe.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="Coffee, Cafe, Armel">
     <meta name="author" content="Armel Mahmutovic">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="cafe.css" type="text/css">
+    <link rel="icon" href="../Assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../Assets/cafe.css" type="text/css">
 </head>
 <body>
 <div class="menu">
 <header>
-<img src="Assets/Armel's Cafe.png" alt="Armel's Cafe" class="logo">
+<img src="../Assets/Media/Armel's Cafe.png" alt="Armel's Cafe" class="logo">
 <p class="established">Est. 2022</p>
 <h2>Specialty Menu</h2>
 </header>
@@ -22,12 +22,12 @@
 <!--Coffee Section-->
 <section>
 <h2>Coffee</h2>
-<img src="Assets/coffee icon.png" onmousedown="this.src='Assets/funni.png';" onmouseout="this.src='Assets/coffee icon.png';" alt="Coffee Icon" class="icon">
+<img src="../Assets/Media/Coffee Icon.png" onmousedown="this.src='../Assets/Media/funni.png';" onmouseout="this.src='../Assets/Media/Coffee Icon.png';" alt="Coffee Icon" class="icon">
 <!--Bosnian Coffee-->
     <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Coffee/Bosnian Coffee.png" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Coffee/Bosnian Coffee.png" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Bosnian Coffee</figcaption> 
     </div>
     <p class="price">$3.75</p>
@@ -37,7 +37,7 @@
     <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Coffee/Cappuccino.jpg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Coffee/Cappuccino.jpg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Cappuccino w/ Foam</figcaption> 
     </div>
     <p class="price">$2.50</p>
@@ -47,7 +47,7 @@
     <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Coffee/French Vanilla.jpeg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Coffee/French Vanilla.jpeg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">French Vanilla</figcaption> 
     </div>
     <p class="price">$1.75</p>
@@ -57,7 +57,7 @@
     <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Coffee/Caramel Macchiato.jpg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Coffee/Caramel Macchiato.jpg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Iced Caramel Macchiato</figcaption> 
     </div>
     <p class="price">$3.50</p>
@@ -67,7 +67,7 @@
 <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Coffee/Pumpkin Spice Latte.webp" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Coffee/Pumpkin Spice Latte.webp" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Pumpkin Spice Latte</figcaption> 
     </div>
     <p class="price">$4.00</p>
@@ -76,12 +76,12 @@
 <!--Dessert Section-->
 <section>
 <h2>Desserts</h2>
-<img src="Assets/dessert icon.png" onmousedown="this.src='Assets/funni.png';" onmouseout="this.src='Assets/dessert icon.png';" alt="Dessert Icon" class="icon">
+<img src="../Assets/Media/Dessert Icon.png" onmousedown="this.src='../Assets/Media/funni.png';" onmouseout="this.src='../Assets/Media/Dessert Icon.png';" alt="Dessert Icon" class="icon">
 <!--Donuts-->
 <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Dessert/Donuts.jpg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Dessert/Donuts.jpg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Donuts</figcaption> 
     </div>
     <p class="price">$1.20</p>
@@ -91,7 +91,7 @@
 <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Dessert/Cinnamon Bun.jpg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Dessert/Cinnamon Bun.jpg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Cinnamon Bun</figcaption> 
     </div>
     <p class="price">$1.00</p>
@@ -101,7 +101,7 @@
 <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Dessert/Danish.jpg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Dessert/Danish.jpg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Danish</figcaption> 
     </div>
     <p class="price">$1.25</p>
@@ -111,7 +111,7 @@
 <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Dessert/Baklava.jpeg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Dessert/Baklava.jpeg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Baklava</figcaption> 
     </div>
     <p class="price">$2.25</p>
@@ -121,7 +121,7 @@
 <article>
     <div class="cf"> 
     <div style="float:left;height:215px;"> 
-    <img src="Assets/Item Pictures/Dessert/Sugar Cookies.jpg" class="flavor, flavorpic">
+    <img src="../Assets/Media/Item Pictures/Dessert/Sugar Cookies.jpg" class="flavor, flavorpic">
     <figcaption class="flavor, flavortxt">Sugar Cookies (12 Pack)</figcaption> 
     </div>
     <p class="price">$6.50</p>
@@ -140,4 +140,3 @@
 </div>
 </body>
 </html>
-
