--- a/Sites/placeholder.html
+++ b/Sites/placeholder.html
@@ -30,7 +30,7 @@ h2 {
 <body>
 <h1>TO BE CONTINUED</h1>
 <h2>Unfortunately, there's nothing here yet. Enjoy this GIF of a spinning cockroach for now.</h2>
-<img src="Assets/cockroach.gif">
+<img src="../Assets/Media/cockroach.gif">
 
 </body>
 </html>
