--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DogVideoApp</title>
+    <title>Armel's Cafe</title>
     <meta http-equiv="refresh" content="0; url=Sites/cafe.html"/>
     <link rel="icon" href="../Assets/favicon.ico" type="image/x-icon">
   </head>
